ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - <your_IP>.nip.io
    secretName: ssl-cert-production
  ingressClassName: nginx
  rules:
  - host: <your_IP>.nip.io
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service: 
            name: rancher-demo
            port:
              number: 80
